@@ -266,7 +266,7 @@ $\var{bnr},H$ (congruence subgroup) or $\var{bnr},\chi$ (character on
 \li{\kbd{idealstar} of all ideals of norm $\le b$}{ideallist$(\var{nf},b,\{\fl\})$}
 \li{add Archimedean places}{ideallistarch$(\var{nf},b,\{ar\},\{\fl\})$}
 
-\li{init \kbd{modpr} structure}{nfmodprinit$(\var{nf},\var{pr})$}
+\li{init \kbd{modpr} structure}{nfmodprinit$(\var{nf},\var{pr},\{v\})$}
 \li{project $t$ to $\ZZ_K/\var{pr}$}{nfmodpr$(\var{nf},t,\var{modpr})$}
 \li{lift from $\ZZ_K/\var{pr}$}{nfmodprlift$(\var{nf},t,\var{modpr})$}
 
