@@ -1,8 +1,9 @@
   ***   at top-level: nfeltmulmodpr(nfinit(x),x,x,1)
   ***                 ^------------------------------
   *** nfeltmulmodpr: incorrect type in checkprid (t_INT).
-[0, 1, 1, error("inconsistent variables in poltobasis, z != y."), 0, error("
-incorrect type in Rg_to_ff (t_COL).")]
+[0, 1, error("inconsistent variables in poltobasis, t != y."), 1, error("inc
+onsistent variables in poltobasis, z != y."), 0, error("incorrect type in Rg
+_to_ff (t_COL).")]
 y^2 + 1: [1, [1, 1], [2, [1, 1]~, 2, 1, [1, -1; 1, 1]]]~
 *[1, 1]:
 error("impossible inverse in F2xq_inv: 0.")
@@ -39,17 +40,20 @@ error("impossible inverse in F2xq_inv: 0.")
 *2:
 [1, 0]~
 *3:
-[1, 0]~
+error("inconsistent variables in poltobasis, t != y.")
 *4:
-error("inconsistent variables in poltobasis, z != y.")
+[1, 0]~
 *5:
-[0, 0]~
+error("inconsistent variables in poltobasis, z != y.")
 *6:
+[0, 0]~
+*7:
 error("incorrect type in Rg_to_ff (t_COL).")
-[0, error("impossible inverse in Fl_inv: Mod(0, 3)."), y, error("inconsisten
-t variables in poltobasis, z != y."), error("impossible inverse in Rg_to_ff:
- Mod(0, 3)."), error("incorrect type in Rg_to_ff (t_COL).")]
-y^2 + 1: [1, [1, 0; 0, 1], [3, [3, 0]~, 1, 2, 1], y^2 + 1]~
+[0, error("impossible inverse in Fl_inv: Mod(0, 3)."), error("inconsistent v
+ariables in poltobasis, t != y."), t, error("inconsistent variables in polto
+basis, z != y."), error("impossible inverse in Rg_to_ff: Mod(0, 3)."), error
+("incorrect type in Rg_to_ff (t_COL).")]
+y^2 + 1: [1, [1, 0; 0, 1], [3, [3, 0]~, 1, 2, 1], t^2 + 1]~
 *[1, 1]:
 error("impossible inverse in Flxq_inv: 0.")
 0
@@ -64,16 +68,19 @@ error("impossible inverse in Flxq_inv: 0.")
 *2:
 error("impossible inverse in Fl_inv: Mod(0, 3).")
 *3:
-[0, 1]~
+error("inconsistent variables in poltobasis, t != y.")
 *4:
-error("inconsistent variables in poltobasis, z != y.")
+error("inconsistent variables in poltobasis, t != y.")
 *5:
-error("impossible inverse in Rg_to_ff: Mod(0, 3).")
+error("inconsistent variables in poltobasis, z != y.")
 *6:
+error("impossible inverse in Rg_to_ff: Mod(0, 3).")
+*7:
 error("incorrect type in Rg_to_ff (t_COL).")
-[0, error("impossible inverse in Fl_inv: Mod(0, 3)."), 0, error("inconsisten
-t variables in poltobasis, z != y."), error("incorrect type in Rg_to_ff (t_C
-OL)."), error("impossible inverse in Rg_to_ff: Mod(0, 3).")]
+[0, error("impossible inverse in Fl_inv: Mod(0, 3)."), error("inconsistent v
+ariables in poltobasis, t != y."), 0, error("inconsistent variables in polto
+basis, z != y."), error("incorrect type in Rg_to_ff (t_COL)."), error("impos
+sible inverse in Rg_to_ff: Mod(0, 3).")]
 y^3 - 9: [1, [1, 0, 0], [3, [0, 1, 0]~, 3, 1, [0, 3, 0; 0, 0, 3; 1, 0, 0]]]~
 *[1, 1]:
 error("impossible inverse in Flxq_inv: 0.")
@@ -89,17 +96,20 @@ error("impossible inverse in Flxq_inv: 0.")
 *2:
 error("impossible inverse in Fl_inv: Mod(0, 3).")
 *3:
-[0, 0, 0]~
+error("inconsistent variables in poltobasis, t != y.")
 *4:
-error("inconsistent variables in poltobasis, z != y.")
+[0, 0, 0]~
 *5:
-error("incorrect type in Rg_to_ff (t_COL).")
+error("inconsistent variables in poltobasis, z != y.")
 *6:
+error("incorrect type in Rg_to_ff (t_COL).")
+*7:
 error("impossible inverse in Rg_to_ff: Mod(0, 3).")
-[0, 1, y, error("inconsistent variables in poltobasis, z != y."), error("inc
-orrect type in Rg_to_ff (t_COL)."), 0]
+[0, 1, error("inconsistent variables in poltobasis, t != y."), t, error("inc
+onsistent variables in poltobasis, z != y."), error("incorrect type in Rg_to
+_ff (t_COL)."), 0]
 y^3 - 9: [[0, -1, -1]~, [1, 1, 0; 0, 1, 1], [2, [3, 3, 1]~, 1, 2, [1, 3, 0; 
-0, 1, 3; 1, 0, 1]], y^2 + y + 1]~
+0, 1, 3; 1, 0, 1]], t^2 + t + 1]~
 *[1, 1]:
 error("impossible inverse in F2xq_inv: 0.")
 0
@@ -116,14 +126,14 @@ error("impossible inverse in F2xq_inv: 0.")
 1
 1
 *[2, 3]:
-y + 1
-y
+t + 1
+t
 *[2, 4]:
 error("impossible inverse in F2xq_inv: 0.")
 0
 *[3, 3]:
 1
-y + 1
+t + 1
 *[3, 4]:
 error("impossible inverse in F2xq_inv: 0.")
 0
@@ -135,13 +145,15 @@ error("impossible inverse in F2xq_inv: 0.")
 *2:
 [1, 0, 0]~
 *3:
-[0, 0, 1]~
+error("inconsistent variables in poltobasis, t != y.")
 *4:
-error("inconsistent variables in poltobasis, z != y.")
+error("inconsistent variables in poltobasis, t != y.")
 *5:
-error("incorrect type in Rg_to_ff (t_COL).")
+error("inconsistent variables in poltobasis, z != y.")
 *6:
-[0, 0, 0]~
+error("incorrect type in Rg_to_ff (t_COL).")
+*7:
+error("inconsistent variables in poltobasis, t != y.")
 y
 [1, 0]~
 
@@ -172,4 +184,4 @@ y
   ***   at top-level: nfmodpr(nfinit(x),[],[]~)
   ***                 ^-------------------------
   *** nfmodpr: incorrect type in checkprid (t_COL).
-Total time spent: 142
+Total time spent: 129
