@@ -1,5 +1,5 @@
 nfeltmulmodpr(nfinit(x),x,x,1);
-v=[0,1/3,y,z,[1,1/3]~, [1,1,1/3]~];
+v=[0,1/3,t,y,z,[1,1/3]~, [1,1,1/3]~];
 test(P) =
 { my(f, V = apply(t->iferr(nfmodpr(K,t,P),E,E),v));
 
@@ -20,10 +20,10 @@ test(P) =
 }
 K=nfinit(y^2+1);
 P = nfmodprinit(K,idealprimedec(K,2)[1]); test(P);
-P = nfmodprinit(K,idealprimedec(K,3)[1]); test(P);
+P = nfmodprinit(K,idealprimedec(K,3)[1],t); test(P);
 K=nfinit(y^3-9);
 P = nfmodprinit(K,idealprimedec(K,3)[1]); test(P);
-P = nfmodprinit(K,idealprimedec(K,2)[2]); test(P);
+P = nfmodprinit(K,idealprimedec(K,2)[2],t); test(P);
 K=nfinit(y^2-1105);
 P7=nfmodprinit(K,idealprimedec(K,7)[1]);
 nfmodprlift(K,nfmodpr(K,y,P7),P7)
